fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ html, body {
 #content {
     width: 960px;
     margin-top: 300px;
+    margin-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -256,6 +257,7 @@ iframe {
     font-size: 18pt;
     font-style: bold;
     margin-top: 25px;
+    margin-bottom: 0px;
 }
 
 #cpw a {
